<resources>
    <string name="app_name">Notes</string>
    <string name="hintNoteBody">write here&#8230;</string>
    <string name="hintNoteTitle">write title&#8230;</string>
    <string name="about">ABOUT NOTES</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_remove">Remove</string>
    <string name="cannot_add_note">Can not add note.</string>
    <string name="cannot_update_note">Can not save changes.</string>
    <string name="cannot_update_settings">Can not save changes in settings.</string>
    <string name="cannot_read_settings">Can not read settings. Default settings will be used.</string>
    <string name="cannot_delete_note">Can not delete note.</string>
    <string name="cannot_read_notes">Can not read data from storage.</string>
    <string name="title_completed">completed</string>
    <string name="title_not_completed">not completed</string>
    <string name="external_background">external background</string>
    <string name="msgRemove">Delete the entry?</string>
    <string name="title_nameAddVers">NOTES version %s</string>
    <string name="author">Author: [me]</string>
    <string name="msgOk">OK</string>
    <string name="noteNew">NEW NOTE</string>
    <string name="noteEdit">EDIT NOTE</string>
    <string name="sTextSize">TEXT SIZE</string>
    <string name="sBigText">Big text</string>
    <string name="sBiggest">Biggest</string>
    <string name="sDefault">Default</string>
    <string name="sTextColor">TEXT COLOR</string>
    <string name="sDefaultTextColor">Default text color</string>
    <string name="sDefaultBackground">Default text background</string>
    <string name="sBackground">BACKGROUND</string>
    <string name="sExample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="sSaveToTXT">Save notes to file</string>
    <string name="empty_list">no notes yet</string>
    <string name="search_hint">find a note…</string>
    <string name="title_search">Search</string>
</resources>